# requests-oidc

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  test.py  token.json  tox.ini
docs/: conf.py  index.rst  requirements.txt
requests_oidc/: __init__.py  catcher.py  discovery.py  exceptions.py  factory.py
requests_oidc/flows/: auth_code.py  client_credentials.py  device_code.py
requests_oidc/utils/: __init__.py  catcher.py  scope.py
src/requests_oidc/: __init__.py  cli.py  plugins.py  types.py
src/requests_oidc/flows/: auth_code.py  client_credentials.py  device_code.py  token.py  utils.py
src/requests_oidc/utils/: catcher.py  discovery.py  scope.py
tests/: test.py  test_import.py
