[tool.poetry]
name = "requests-oidc"
version = "0.1.2"
description = ""
authors = ["Tristan Sweeney <tsweeney@dustidentity.com>"]
readme = "README.rst"
packages = [{include = "requests_oidc"}]
repository = "https://github.com/tsweeney-dust/requests-oidc"
documentation = "https://requests-oidc.readthedocs.io/en/latest/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
