[tool.poetry]
name = "requests-oidc"
version = "0.4.2"
description = ""
authors = ["Tristan Sweeney <tsweeney@dustidentity.com>"]
readme = "README.rst"
packages = [{include = "requests_oidc", from = "src"}]
repository = "https://github.com/tsweeney-dust/requests-oidc"
documentation = "https://requests-oidc.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
appdirs = "^1.4.4"
qrcode = "^7.4.2"


[tool.poetry.group.dev.dependencies]
sphinx = ">=5.0.0"
sphinx-toolbox = "^3.2.0"
sphinx-copybutton = "^0.5.1"
types-requests = "^2.28.11.15"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
